--- a/styles/style.css
+++ b/styles/style.css
@@ -366,7 +366,7 @@ main {
 
 .options-clr {
   font-size: 0.9rem;
-  color: #484b6a;
+  color: #5a5b61;
   cursor: pointer;
   transition: all 0.3s;
 }
